added the footer hehe

--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
 <p> Project Tilth </p>
 <p> Coming soon </p>
 <a href="contact.html">contact us</a>
+<footer>
+  Developed by Francis Biller
+</footer>
 </body>
 </html>
